Sun Apr 26 23:39:56 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ir/Expr.java: show Expr type on dump.

	* net/loveruby/cflat/type/FunctionType.java: FunctionType#toString
	  should separate each argument types by ",".

Sun Apr 26 23:35:07 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ir: implement IR#dump.

Sun Apr 26 22:41:08 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java (BlockNode): static
	  variables are special case.

	* net/loveruby/cflat/compiler/IRGenerator.java (SwitchNode):
	  Switch must precedes Case bodies to prevent programs from infinite
	  loop.

	* net/loveruby/cflat/compiler/CodeGenerator.java (Bin): fix MOD
	  problem.

	* net/loveruby/cflat/compiler/CodeGenerator.java (Bin): fix LSHIFT
	  problem.

Sun Apr 26 22:08:35 2009  Minero Aoki  <aamine@loveruby.net>

	* now IR nodes are separated from AST.  Sources are compilable but
	  not tested yet.

	* ir/*: new classes.

Sun Apr 26 18:06:52 2009  Minero Aoki  <aamine@loveruby.net>

	* ast/ASTVisitor.java: fork DeclarationVisitor.

	* ast/DeclarationVisitor.java: new class.

	* compiler/Visitor.java: do not visit declarations.

	* compiler/TypeResolver.java: visit declarations explicitly.

	* compiler/IRGenerator.java: remove useless declarations acceptor.

	* compiler/CodeGenerator.java: ditto.

	* ast/Entity.java: accept DeclarationVisitor.

	* ast/DefinedFunction.java: ditto.

	* ast/UndefinedFunction.java: ditto.

	* ast/DefinedVariable.java: ditto.

	* ast/UndefinedVariable.java: ditto.

	* ast/TypeDefinition.java: ditto.

	* ast/StructNode.java: ditto.

	* ast/UnionNode.java: ditto.

	* ast/TypedefNode.java: ditto.

Sun Apr 26 17:44:14 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java (SuffixOp): do not
	  calculate twice.  Save expr value and reuse it.

Sun Apr 26 17:24:42 2009  Minero Aoki  <aamine@loveruby.net>
