@@ -1,3 +1,9 @@
+Sun Apr 26 23:54:47 2009  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/IRGenerator.java: use
+	  ExprNode#shouldEvalutedToAddress again, it contains complex
+	  condition.
+
 Sun Apr 26 23:39:56 2009  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/ir/Expr.java: show Expr type on dump.
